# terminal-ai-agents-workshop

./: .gitignore  .pre-commit-config.yaml  Makefile  README.org  main.py  pyproject.toml  pyrightconfig.json  setup.org
.beads/: interactions.jsonl
docs/: agent-feature-comparison.org  terminal-agents-design.org  terminal-agents-landscape.org
experiments/: README.org
research/: reading-list.org
scripts/: run_workshop.sh  setup.sh
src/examples/: complete_agent.py
src/labs/: agent_comparison.py  minimal-agent.scm  minimal_agent.py
src/patterns/: basic_tool.py
src/tools/: file_operations.py  git_operations.py  project_analysis.py  web_search.py
